Add cakefile for building, watching, generating docs with docco.

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
     "name": "backpack"
-  , "description": "An unopinionated pack of utilities for backbone.js"
+  , "description": "A backpack full of UI components for your Backbone.js projects"
   , "version": "0.0.1"
   , "homepage": "https://github.com/airbnb/backpack.js"
   , "authors": ["Harrison Shoff <harry@airbnb.com> (https://github.com/h4rry)", "Dave Augustine <dave@airbnb.com> (https://github.com/daveaugustine)"]
-  , "./lib": "./lib/backpack"
+  , "main": "./lib/index.js"
   , "repository": {
         "type": "git"
       , "url": "https://github.com/airbnb/backpack.js.git"
     }
   , "dependencies": {
-      "coffee-script": "1.2.x"
     }
   , "devDependencies": {
+      "coffee-script": "1.2.x"
     }
   , "engine": { "node": "0.4.x" }
 }
