--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "type": "git"
       , "url": "https://github.com/airbnb/backpack.js.git"
     }
+  , "scripts": {
+      "test": "jasmine mon"
+    }
   , "dependencies": {
     }
   , "devDependencies": {
