--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   , "name":         "Backpack"
   , "description":  "A backpack full of UI components for your Backbone.js projects"
   , "version":      "0.0.1"
-  , "main":         "./Backpack-bundle"
+  , "main":         "./lib/Backpack-bundle"
   , "homepage":     "https://github.com/airbnb/backpack.js"
   , "keywords": [
         "ui"
@@ -26,15 +26,16 @@
         "test":   "cake test"
     }
   , "dependencies": {
-      "jquery":         "*"
-    , "underscore":     "*"
-    , "backbone":       "*"
-  }
+        "backbone":     "0.9.x"
+      , "underscore":   "1.3.x"
+      , "jquery":       "*"
+    }
   , "devDependencies": {
         "coffee-script":  "1.2.x"
       , "mocha":          "*"
+      , "docco":          "*"
+      , "colors":         "*"
       , "expect.js":      "*"
       , "uglify-js":      "*"
     }
-  , "ender": "./ender.js"
 }
